# os-project-20252-166239

./: .dockerignore  .gitignore  AGENTS.md  AGENT_PROMPT_NEW_ALGO.md  Dockerfile  README.md  app.py  huong-dan-chay-script.md  main.py  pyproject.toml
data/: config.json  history.json
docs/: algorithm-extension-guide.md  comparison-analysis.md  master-plan.md  project-draft.md
docs/superpowers/: 2026-05-15-scheduling-platform-blueprint.md
docs/superpowers/plans/: 2026-05-15-mlfq-os-simulator.md
docs/superpowers/specs/: 2026-05-15-mlfq-os-simulator-final-spec.md
scripts/: build-docker-image.ps1  run-docker-image.ps1  run-project.ps1  setup-python-tooling.ps1
src/mlfq_os_simulator/: __init__.py  config.py  metrics.py  models.py  repository.py  scheduler.py
src/mlfq_os_simulator/algorithms/: __init__.py
src/mlfq_os_simulator/application/: comparison_models.py  comparison_service.py  registry.py  services.py  strategy_loader.py  workloads.py
src/mlfq_os_simulator/infrastructure/: __init__.py  json_repository.py
src/mlfq_os_simulator/shared/: __init__.py  config.py  contracts.py  metrics.py  process.py  results.py
src/mlfq_os_simulator/ui/: __init__.py  animation.py  comparison_tab.py  config_fields.py  dashboard_tab.py  history_tab.py  sidebar.py  simulator_tab.py
tests/: conftest.py
tests/integration/: test_app.py  test_comparison_tab.py
tests/unit/: test_algorithm_registry.py  test_comparison_schedulers.py  test_comparison_service.py  test_repository.py  test_scheduler.py  test_scheduler_contracts.py  test_shared_config.py  test_ui_helpers.py
(+11 files in other folders)
